--- a/index.html
+++ b/index.html
@@ -22,21 +22,10 @@
 
             <!-- image by Hacktivity: https://www.flickr.com/photos/hacktivity/51576099193/in/album-72157719993277298/ -->
             <img src="/assets/index/images/david-square.png" class="profile"/>
-            <p style="font-size: 50px; padding-top: 10px; margin-bottom: 5px">YOUNES .O</p>
-            <p style="padding-bottom: 5px"><i>security & bug bounty</i></p>
+            <p style="font-size: 50px; padding-top: 10px; margin-bottom: 5px">YOUNES O.</p>
+            <p style="padding-bottom: 5px"><i>Application Security Researcher,CTF Player</i></p>
 
-            <div id="spotify" style="padding-bottom: 20px">
-                <div id="ltext">
-                    <span id="live-message" style='vertical-align: middle; display: none'></span>
-                </div>
-
-                <div>
-                    <img id="live-dot" width='25px' style='vertical-align: text-top; display: none' src='/assets/index/images/circle.svg'/>
-                    <span id="artist" style="white-space: nowrap;"></span>
-                     - 
-                    <span id="song" style="white-space: nowrap;"></span>
-                </div>
-            </div>
+            
 
             <div class="interactive">
                 <!-- Icons by https://www.iconsdb.com/ -->
