--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <span style="padding-right: 5px"></span>
                 <a href="https://www.linkedin.com/in/YOUN3S" target="_blank"><img src="/assets/index/images/linkedin.png" style="width: 51.2px; height: 51.2px"/></a>
                 <span style="padding-right: 5px"></span>
-                <a href="https://open.spotify.com/user/xdavidhu" target="_blank"><img src="/assets/index/images/spotify.png" style="width: 51.2px; height: 51.2px"/></a>
+                <a href="https://tryhackme.com/p/YOUNES" target="_blank"><img src="/assets/index/images/tryhackme.png" style="width: 51.2px; height: 51.2px"/></a>
                 <span style="padding-right: 5px"></span>
                 <a href="https://github.com/YOUNE-S" target="_blank"><img src="/assets/index/images/github.png" style="width: 51.2px; height: 51.2px"/></a>
             </div>
