--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             </div>
 
             <div style="margin-top: 30px" class="interactive">
-                <a href="https://bugs.xdavidhu.me/"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px">writeups</button></a>
-                <a href="content/"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px">content</button></a>
-                <a href="archive/"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px">archive</button></a>
+                <a href="timeline/"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px">timeline</button></a>
+                <a href="projects/"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px">projects</button></a>
+                <a href="RESUME.pdf/"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px">resume</button></a>
             </div>
 
         </div>
