--- a/timeline/index.html
+++ b/timeline/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="no-js">
 <head>
 	<meta charset="UTF-8">
-    <title>[xdavidhu/timeline]</title>
+    <title>[YOUN3S/timeline]</title>
     <link rel='shortcut icon' type='image/x-icon' href='/archive/assets/images/xdavid_new.png'/>
 
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
