--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
             </div>
 
             <div style="margin-top: 30px" class="interactive">
-                <a href="timeline/"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px">timeline</button></a>
-                <a href="projects/"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px">projects</button></a>
+                
                 <a href="RESUME.pdf"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px">resume</button></a>
+                <a href="projects/"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px">projects</button></a>
+                <a href="archive/"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px">archive</button></a>
+                
             </div>
 
         </div>
