--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div class="panel" id="main">
 
             <!-- image by Hacktivity: https://www.flickr.com/photos/hacktivity/51576099193/in/album-72157719993277298/ -->
-            <img src="\assets\index\images\xyounes.jpg" class="profile"/>
+            <img src="\assets\index\images\f18bf15521d00211740e4e5889c1532a0f99c83e_hq.gif" class="profile"/>
             <p style="font-size: 50px; padding-top: 10px; margin-bottom: 5px">YOUNES O.</p>
-            <p style="padding-bottom: 5px"><i>IT Security Student, CTF Player</i></p>
+            <p style="padding-bottom: 5px"><i>Application Security Researcher, CTF Player</i></p>
 
             
 
