--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 
                 <a href="RESUME.pdf"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px">resume</button></a>
                 <a href="projects/"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px">projects</button></a>
-              <!--  <a href="archive/"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px">archive</button></a>-->
+                <a href="archive/"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px">timeline</button></a>
                 
             </div>
 
