--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <div style="margin-top: 30px" class="interactive">
                 
                 <a href="RESUME.pdf"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px">resume</button></a>
-                <a href="projects/"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px">projects</button></a>
-                <a href="archive/"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px">timeline</button></a>
+               <!-- <a href="projects/"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px">projects</button></a>
+                <a href="archive/"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px">timeline</button></a>-->
                 
             </div>
 
