--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <div class="interactive">
                 <!-- Icons by https://www.iconsdb.com/ -->
-                <a href="https://twitter.com/cyoun3s" target="_blank"><img src="/assets/index/images/twitter.png" style="width: 51.2px; height: 51.2px"/></a>
+                <a href="https://twitter.com/" target="_blank"><img src="/assets/index/images/twitter.png" style="width: 51.2px; height: 51.2px"/></a>
                 <span style="padding-right: 5px"></span>
                 <a href="https://www.linkedin.com/in/YOUN3S" target="_blank"><img src="/assets/index/images/linkedin.png" style="width: 51.2px; height: 51.2px"/></a>
                 <span style="padding-right: 5px"></span>
