--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
             if ((host == window.location.host) && (window.location.protocol != "https:"))
                     window.location.protocol = "https";
          </script>
-        
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4908864434027562"
+     crossorigin="anonymous"></script>
 
         <noscript>
             <div class="panel"><h1>Please enable JavaScript.</h1></div>
